Fix Cupertino color on mobile

--- a/src/color-schemes/cupertino.scss
+++ b/src/color-schemes/cupertino.scss
@@ -37,7 +37,7 @@ https://developer.apple.com/design/human-interface-guidelines/color
 }
 .theme-light.cupertino-light.is-mobile {
   --background-primary: #fff;
-  --background-primary-alt: #fff;
+  --background-primary-alt: #f2f2f7;
   --background-secondary: #f2f2f7;
   --background-secondary-alt: #fff;
 
